Infinite Heaven changelog

r183 - 2016-09-24
Fixed: Infinite load screen on traveling between free<>mission for some missions - thanks RealQi for the save file.
Improved: Added delay on quick menu command activation. Should mean less accidental triggering of quick menu commands - thanks RealQi for the prod.

r182 - 2016-09-22
Fixed: Being unable to ready weapon when all Custom equip options are turned on and prep config has all weapons set - thanks Gambchon for the report and save file.
Option: mbqfEnableSoldiers - Force enable Quaranine platform soldiers - in the normal game the Qurantine platform soldiers are disabled once you capture Skulls. This option re-enables them.

(via Mother Base menu)
Added: IH visit morale support for Quarantine plat.
Added: Suit support for Quarantine plat.
Added: Custom soldier equip for Quarantine plat - if you have been using the 'MB staff use custom equip' you will have to set it again this version as the update has reset it.
Added: Skulls attack support for Quarantine plat - no seperate option, uses 'Enable Skull attacks in Free roam'. Alternatively can be triggered by attacking captured Skulls in the cells.
Exposed: mbEnableLethalActions - Allow lethal actions - Enables lethal weapons and actions on Mother Base. You will still get a game over if you kill staff.
(via Mother Base menu)

r181
InfMessageLog: Realised I was being stupid and why my prior uses of io failed. message log outputs to file now. God, how many months of me thinking the module was blocked lol - thanks TideGear for putting me in the mindset to test try it again.
Append mode still seems to be no-go, gives 'Domain error', same message most other errors (open 'r' with no file found).
Refactor: InfMessageLog/AddMessage renamed to InfLog/Add. Less typing for something thats going to get a lot of use.
Loading shifted to start of init.lua so it can cover from very start of lua execution.