@@ -1,5 +1,9 @@
 Infinite Heaven changelog
 
+r184 - 2016-09-26
+Fixed: Quick menu should not activate if holding a quick menu command button then holding the quick menu on button(CALL), will only be activated on quick menu on button(CALL) held then pressing a quick menu command button - thanks LucrassKelvac for your report.
+I'm aware some people will still have issue with how quick menu is activated, depending on how they play. Quick menu will be much more configurable in comming version.
+
 r183 - 2016-09-24
 Fixed: Infinite load screen on traveling between free<>mission for some missions - thanks RealQi for the save file.
 Improved: Added delay on quick menu command activation. Should mean less accidental triggering of quick menu commands - thanks RealQi for the prod.
